# GmailPT

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/api/routers/: chat.py
backend/app/utils/: index.py
frontend/: package-lock.json  package.json
frontend/app/components/: header.tsx
