[tool.poetry]
name = "llamaindex-fastapi-streaming"
version = "0.1.0"
description = ""
authors = ["Marcus Schiesser <mail@marcusschiesser.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "^0.104.1"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
llama-index = "^0.9.3.post1"
llama-hub = "^0.0.47.post1"
pypdf = "^3.17.0"
python-dotenv = "^1.0.0"
arize-phoenix = "^1.2.1"
langchain = "^0.0.340"
openai = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
